Created 'wandering Dijkstra' algorithm which collects the nearest gold until it's time to escape directly